--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Website cobaan</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Software Development</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <div class="wrapper">
-      <div class="logo"><a href="">About Kaizen</a></div>
-      <div class="menu">
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#courses">Courses</a></li>
-          <li><a href="#tutors">Tutors</a></li>
-          <li><a href="#partners">Partners</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="" class="tbl-biru">Sign Up</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="wrapper">
-    <section id="home">
-      <img src="https://img.freepik.com/premium-vector/web-design-concept-work-mobile-app-programming-remote-work-coding_675567-3270.jpg?w=740"/>
-      <div class="kolom">
-        <p class="deskripsi">Kaizen Create</p>
-        <h2>This Is Me</h2>
-        <p>kaizen atau bernama asli panji adalah seorang programer pemula</p>
-      </div>
+    <header>
+        <div class="logo">YourLogo</div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active">About</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Implementation</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Sign In</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Software Development</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="buttons">
+                <a href="#" class="btn primary">More details</a>
+                <a href="#" class="btn secondary">View demo</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="coding-illustration.png" alt="Coding Illustration">
+        </div>
     </section>
-  </div>
 </body>
 </html>
